[package]
name = "smoke-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.3"
anyhow = "1.0.69"
futures = "0.3.26"
indexmap = { version = "1.9.2", features = ["std"] }
tokio = { version = "1.25.0", features = ["io-util", "rt-multi-thread", "net", "macros", "parking_lot"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["once_cell", "parking_lot", "time", "env-filter"] }
