[package]
name = "means-2-end"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.69", features = ["backtrace"] }
futures = "0.3.26"
tokio = { version = "1.25.0", features = ["rt-multi-thread", "net", "macros", "parking_lot", "io-util"] }
tracing = { version = "0.1.37", features = ["log", "async-await"] }
tracing-subscriber = { version = "0.3.16", features = ["once_cell", "parking_lot", "time", "env-filter"] }
